# Thumbnail_Generator

./: .gitignore  LeagueReviewMetaData.txt  functions.py  metaReview.py  pyproject.toml  thCube.py  thFaceReaction.py  thReview.py  thumbReview.py
cache/: AIdro_nJhAHE_l_v6A_KdDaSAVEXHKgzPKjSVt2l5I4pEYJ85A=s88-c-k-c0x00ffffff-no-rj  AIdro_nh201P-Uc_ZQe0V5MtEc81yabVxHNgFHV8BWsc5QaLtr0=s88-c-k-c0x00ffffff-no-rj
doc/: commands.md
reactions/: me-wtf-1280.xcf  me-wtf.xcf
src/: colors.py  cube.py  deck_presentation.py  fonts.py  utils.py  utils_image.py
src/anarcho_realiste/: liquidzulu_lessons.py
src/docu/: pixelate.py
src/layouts/: card_layouts.py
src/mtgones/: deck_presentation.py  face_reaction.py  generic.py  league.py
src/video/: bg_mtg.py
th/: colors.py  deck_presentation.py  face_reaction.py  utils.py
